--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -3,6 +3,8 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "centos/7"
   config.vm.network "private_network", ip: "172.16.10.100"
+  config.vm.network "public_network", ip: "10.0.4.218"
+
   config.vm.hostname = "master.xtl"
   config.vm.provider "virtualbox" do |vb|
      vb.name = "master.xtl"
