--- a/Vagrant/Woker_2/Vagrantfile
+++ b/Vagrant/Woker_2/Vagrantfile
@@ -3,7 +3,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "centos/7"
   # Local IP
-  # config.vm.network "private_network", ip: "172.16.10.102"
+  config.vm.network "private_network", ip: "172.16.10.102"
   #Public IP
   config.vm.network "public_network", ip: "10.0.4.223"
 
