--- a/Deployment/deploy.yaml
+++ b/Deployment/deploy.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   # tên của deployment
-  name: checkinpro-fe
+  name: checkinpro-api
 spec:
   # số POD tạo ra
   replicas: 1
@@ -10,21 +10,28 @@ spec:
   # thiết lập các POD do deploy quản lý, là POD có nhãn  "app=deployapp"
   selector:
     matchLabels:
-      app: checkinpro-fe
+      app: checkinpro-api
 
   # Định nghĩa mẫu POD, khi cần Deploy sử dụng mẫu này để tạo Pod
   template:
     metadata:
       name: podapp
       labels:
-        app: checkinpro-fe
+        app: checkinpro-api
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: node
-          image: registry.unit.vn/checkinpro-api:0.1
+          image: registry.unit.vn/checkinpro-api:1.19
+          imagePullPolicy: "Always"
           resources:
             limits:
-              memory: "128Mi"
-              cpu: "100m"
+              memory: "2Gi"
+              cpu: "1000m"
           ports:
-            - containerPort: 80
+            - containerPort: 5200
+      imagePullSecrets:
+        - name: registry-gitlab
+# kubectl set image deployment/checkinpro-api node=registry.unit.vn/checkinpro-api:1.16 --record
+# kubectl set image deployment/nginx-deployment nginx=nginx:1.16.1 --record
+
